# t3

./: .gitignore  CMakeLists.txt  README.md  Update T3 - mmatic90(Unicorn).txt  main.c  main.cpp  main.h  t3  t3-build  t3-build.c
core/: abstract-data-types.h  adt.h  config-project.h  ecs.h  globals.h  helpers.h  t3-abstract-data-types.h  t3-config-project.h  t3-ecs.h  t3-globals.h  t3-helpers.h  t3-input.h  t3-math.h  t3-types.h
core/source/: globals.c  input.c  t3-globals.c  t3-input.c  t3-math.c  t3-types.c  vector2.c
core/source/adt/: linked_list.c  list.c  node.c  queue.c  stack.c  t3-linked_list.c  t3-list.c  t3-node.c  t3-queue.c  t3-stack.c
core/source/ecs/: component.c  entity.c  game-loop.c  position.c  scene.c  t3-component.c  t3-entity.c  t3-game-loop.c
core/source/ecs/components/: camera.c  position.c  rotation.c  scene.c  sprite.c  t3-camera.c  t3-position.c  t3-rotation.c  t3-scene.c  t3-sprite.c  t3-texture.c  texture.c
core/source/helpers/: logging.c  randomisation.c  sdl-rect-helper.c  t3-binary.c  t3-char.c  t3-logging.c  t3-memory.c  t3-randomisation.c  t3-sdl-rect-helper.c
docs/: coding-standards.md  coding_standards.md  documentation_contribution.md  example_api.md  example_non_api.md  helpers.md  logging.md  memory.md  overview.md  randomization.md  welcome.md
framework/components/: position.cpp  position.h  scene.cpp  scene.h
framework/config/: game-config.h
framework/helper/: logging.cpp  logging.h  memory.h  randomisation.cpp  randomisation.h  variadic_macros.h
project-root/: start.c
project/example-project-1/: main_entity.h  mushroom.h
